# comp-2017-cscoins

./: README.md  mt64.py
docker-client/: config.json  env.rc  readme.md
docker-client/miner/: Dockerfile
src/: .gitignore  README.md
src/caserver/: CentralAuthorityServer.py  ChallengeThread.py  ConfigurationFile.py  Distribution.py  RequestControl.py  ServerDatabase.py  ServerStatistic.py  Transaction.py  Wallet.py  ca_config.txt  main.py  readme.md
src/caserver/challenges/: BaseChallengeGenerator.py  Challenge.py  ReverseSortedListChallenge.py  ShortestPathChallenge.py  SortedListChallenge.py  Submission.py  __init__.py
src/caserver/commands/: BaseCommand.py  CaServerInfoCommand.py  CloseCommand.py  CreateTransactionCommand.py  CreateWalletCommand.py  GetTransactionsCommand.py  (+5 more)
src/coinslib/: BaseClient.py  Challenge.py  Command.py  MersenneTwister64.py  Transaction.py  Utils.py  __init__.py
src/minerclient/: ChallengeSolver.py  Grid.py  MinerClient.py  main.py  readme.md
src/walletmanager/: coins-client.js  index.html  index_backup.html  readme.md
submissions/concordia/: README.md
submissions/concordia/cscoin-miner/: Cargo.toml  Dockerfile  README.md
submissions/concordia/cscoin-miner/cert/: ca.pem
submissions/concordia/cscoin-miner/config/: config.json  env.rc
submissions/concordia/cscoin-miner/src/: main.rs
submissions/concordia/cscoin-miner/src/client_miner/: mod.rs  shortest_path.rs
submissions/concordia/cscoin-miner/src/server_comms/: cmd_response.rs  error.rs  mod.rs
submissions/concordia/cscoin-miner/src/threads/: mod.rs  worker.rs
(+2 files in other folders)
